# GRBL_MPG_DRO_BoosterPack

./: readme.md  tivac_pins.md
Firmware/Keypad processor/: main.c
Firmware/MPG and DRO processor/: config.h  fonts.c  fonts.h  grbl.h  grblcomm.c  grblcomm.h  keypad.c  keypad.h  main.c  mpg.c  mpg.h  navigator.c  navigator.h  rpm.c  rpm.h  serial.c  serial.h  signals.c  signals.h  tiva.h
Firmware/MPG and DRO processor/canvas/: boot.c  boot.h  common.c  common.h  confirm.c  confirm.h  dro.c  dro.h  grblutils.c  grblutils.h  menu.c  menu.h  sender.c  sender.h  threading.c  threading.h
Firmware/RP2040/: CMakeLists.txt
Firmware/RP2040/hal_rp2040/: CMakeLists.txt  driver.c  driver.h  encoder.pio  i2c_nb.c  i2c_nb.h  serial.c  serial.h
Firmware/RP2040/hal_rp2040/lcd_driver/: driver.c  driver.h
Firmware/RP2040/msp430/: CMakeLists.txt  Config430.h  Devices430.c  Devices430.h  FlashErase.c  FlashWrite.c  JTAGfunc430.c  JTAGfunc430.h  LowLevelFuncRP2040.c  LowLevelFuncRP2040.h
Firmware/RP2040/src/: config.h  grblcomm.c  grblcomm.h  interface.c  interface.h  keypad.c  keypad.h  main.c  msp430.c  msp430_firmware.h
Firmware/RP2040/src/LCD/: config.h  graphics.c  graphics.h  ili934x.c  ili934x.h  ili9486.c  ili9486.h  interface.c  lcd.c  lcd.h  st7789.c  st7789.h
Firmware/RP2040/src/LCD/TJpegDec/: tjpgd.c  tjpgd.h
Firmware/RP2040/src/LCD/Touch/: calibrate.h  quickselect.c  touch.h
Firmware/RP2040/src/UILib/: CMakeLists.txt  config.h  uilib.c  uilib.h
Firmware/RP2040/src/canvas/: boot.c  confirm.c  dro.c  dro.h  grblutils.c  grblutils.h  menu.c  menu.h  sender.h  threading.c  threading.h
Firmware/RP2040/src/fonts/: advanced_pixel_lcd-7.h  calibri_21x24.h  font.h  font_23x16.h  msp.h
Firmware/RP2040/src/grbl/: grbl.h  i2c_interface.h  parser.c  parser.h
Firmware/RP2040/src/resources/: elogo.h
Firmware/TM4C123/: .ccsproject  .cproject  .project  driver.c  driver.h  i2c.c  i2c.h  serial.c  serial.h  tiva.h
Firmware/TM4C123/.launches/: GRBL Lathe Control.launch  GRBL MPG and DRO Panel.launch  grblHAL MPG and DRO Panel.launch
Firmware/TM4C123/LCD Driver/: driver.c  driver.h
Firmware/TM4C123/src/: config.h  fonts.c  fonts.h  grbl.h  grblcomm.c  grblcomm.h  interface.c  interface.h  keypad.c  main.c
Firmware/TM4C123/src/LCD/: CMakeLists.txt  colorRGB.h  graphics.h  interface.c
Firmware/TM4C123/src/LCD/Touch/: calibrate.c  quickselect.h  touch.c  touch.h
Firmware/TM4C123/src/UILib/: config.h  uilib.c  uilib.h
Firmware/TM4C123/src/canvas/: boot.c  boot.h  common.c  common.h  confirm.h  dro.c  dro.h  grblutils.c  menu.c  sdcard.c  sdcard.h  sender.c
Firmware/TM4C123/src/fonts/: arial_48x55.h  freepixel_17x34.h  freepixel_9x17.h  proportional_8x8.h  template.h
PCB/: License.md  MPG and DRO BoosterPack.kicad_pcb  MPG and DRO BoosterPack.pro
Pi_Pico_Board/: RP2040 MPG and DRO-cache.lib  RP2040 MPG and DRO.kicad_pcb  RP2040 MPG and DRO.pro  RP2040 MPG and DRO.sch
TivaC_Board/: MPG and DRO BoosterPack-cache.lib  MPG and DRO BoosterPack.sch
